# streamlit-sql-for-beginners

./: .gitignore  AGENTS.md  Makefile  README.md  components.py  course.py  pyproject.toml  requirements.txt  sql_practice.py  streamlit_app.py
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
.streamlit/: config.toml
app_pages/: coming_soon.py  course_map.py  home.py  lesson_filtering.py  lesson_select.py  practice.py
app_pages/lessons/module-0-getting-started/: 01-what-is-sql.md  02-how-to-practice.md  03-terminology.md
app_pages/lessons/module-1-basics/: 01-select-from.md  02-columns-and-limit.md  03-where-filtering.md  04-and-or-not.md  05-nulls.md  06-counting.md  07-sum-min-max-avg.md  08-aliases.md  09-aggregations-with-filters.md  10-group-by.md  11-order-by.md  12-having.md  13-query-template.md  14-string-functions.md  15-math-functions.md  16-date-functions.md  17-coalesce.md  18-case-statement.md
app_pages/lessons/module-2-joins/: 01-subqueries.md  02-ctes.md  03-unions.md  04-inner-join.md  05-left-right-join.md  06-row-duplication.md  07-cross-join.md
app_pages/lessons/module-3-window-functions/: 01-intro-over.md  02-ranking-functions.md  03-aggregating-functions.md  04-offset-functions.md
app_pages/lessons/module-4-architect/: 01-intro-ddl.md  02-create-table.md  03-keys-and-relationships.md  04-alter-drop.md  05-views.md  06-transactions.md
app_pages/lessons/module-5-optimizer/: 01-table-scans.md  02-indexes.md  03-partitioning.md  04-optimization-habits.md
tests/: test_course.py  test_sql_practice.py
